--- a/style.css
+++ b/style.css
@@ -1,24 +1,38 @@
 body{
-	background: #CCCCCC;
-} 
- 
- #banner{
- 	width:100%;
-  }
- 
-h1{
-	text-align: center;
+  background-color: #CCCCCC
 }
-
+h1 {
+  text-align: center; color: rgb(20, 23, 45); font-size: 25px
+}
+h2 {
+  text-align: center; color: rgb(20, 23, 45); font-size: 25px
+}
+h3 {
+  text-align: center; color: rgb(20, 23, 45); font-size: 25px
+}
+h4 {
+  text-align: center; color: rgb(20, 23, 45); font-size: 25px
+}
+h5 {
+  text-align: center; color: rgb(20, 23, 45); font-size: 25px
+}
+h6 {
+  text-align: center; color: rgb(20, 23, 45); font-size: 25px
+}
+h7{
+  text-align: center; color: red; font-size: 25px
+}
 p {
-	text-align: center;
+  text-align: left; color: blue; font-size: 25px
 }
-
-#missao {
-	font-size: 20px;
+p1 {
+  text-align: left; color: red; font-size: 25px
 }
-
-em strong {
-	color: #FF0000;
+#progra01{
+  width: 20%;
+  border: 5px solid red;
+  margin-left: 400px
 }
-
+.modelos{
+  text-align: justify; font-size: 25px; color: blue
+}
