--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body{
-  background-image: url("foto02.jpg");
-  background-position: static;
+  background-color: #CCCCCC;
 }
 #logotipo{
   width: 200px;
@@ -17,30 +16,11 @@ nav li {
 h1 {
   text-align: center; color: rgb(20, 23, 45); font-size: 25px
 }
-h2 {
-  text-align: center; color: rgb(20, 23, 45); font-size: 25px
-}
-h3 {
-  text-align: center; color: rgb(20, 23, 45); font-size: 25px
-}
-h4 {
-  text-align: center; color: rgb(20, 23, 45); font-size: 25px
-}
-h5 {
-  text-align: center; color: rgb(20, 23, 45); font-size: 25px
-}
-h6 {
-  text-align: center; color: rgb(20, 23, 45); font-size: 25px
-}
-h7{
-  text-align: center; color: red; font-size: 25px
-}
+
 p {
-  text-align: left; color: blue; font-size: 25px
+  text-align: left; color: black; font-size: 25px
 }
-p1 {
-  text-align: left; color: red; font-size: 25px
-}
+
 #fotoinício{
   width: 20%;
   border: 5px solid white;
